エラー修正
存在しないvideoidが入力された時に止まる不具合を修正

--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <form action="/download" method="get">
-      <label for="url">Youtube URL:</label>
-      <input type="text" id="url" name="url"><br><br>
+      <label for="url">Youtube URL: https://youtube.com/watch?v=</label>
+      <input type="text" id="url" name="url">
       <input type="submit" value="Download">
     </form>
   </body>
