--- a/views/index.html
+++ b/views/index.html
@@ -641,8 +641,8 @@
 内容：<input name="jusho" size=40><br>
 氏名：<input name="address" size=20><br>
     <form action="/download" method="get">
-      <label for="url">Youtube URL: https://youtube.com/watch?v=</label>
-      WebサイトURL：<input type="text" id="url" name="url">
+      <label for="url">webサイトURL（YouTubeのみ）: https://youtube.com/watch?v=</label>
+      <input type="text" id="url" name="url">
       <input type="submit" value="送信">
     </form>
   </body>
