--- a/views/error.html
+++ b/views/error.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>エラー</title>
 </head>
 <body>
-    <p>エラーが発生しますた。<br>一応入力した内容を確認してください。</p>
+    <p>エラーが発生しました。<br>一応入力した内容を確認してください。</p>
     <a href="/">戻る</a>
 </body>
 </html>
